--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 # references:
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
-language: objective-c
+os: osx
+osx_image: xcode10.2
+language: swift
 # cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+podfile: Example/Podfile
+before_install:
+- gem install cocoapods # Since Travis is not always on latest version
+- pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/MemoryJar.xcworkspace -scheme MemoryJar-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/MemoryJar.xcworkspace -scheme MemoryJar-Example -sdk iphonesimulator12.2 ONLY_ACTIVE_ARCH=NO -destination 'platform=iOS Simulator,name=iPhone 6,OS=12.2' | xcpretty
 - pod lib lint
